
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 AUG 18a
  * in model/share/transport_share.c
    - in adjust_muk_for_Ek_effect(), added contribution of electric field to electron mobilities
      from Tarasenko paper
  * in model/transport/doc/report.tex
    - added section "Effect of Electric Field on Mobilities"
  * in model/chem/_Air_Plasma_11s/chem.c, model/chem/_Air_Plasma_11s/doc/report.tex,
    model/chem/_Air_Plasma_11s/parent2023b.c
    - added PARENT2023B model
  * in model/chem/_C2H4_Air_Plasma_30s/chem.c
    - changed TEMAX from 1e6 to 1e5 K
  * in model/share/chem_share.c
    - improved documentation of fit4 functions
  

2022 AUG 13a
  * in model/chem/_C2H4_Air_Plasma_30s/chem.c
    - made modifications
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - in write_model_fluid_template() and read_model_fluid_actions() added SCHOTTKY_EFFECT
  * in model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - in update_bdry_wall(), added dWschottky contribution to the work function
  * in model/fluid/doc/Transport_Equations/report.tex
    - in the section ``Thermionic Emission Boundary Condition'', added documentation explaining
      Schottky effect to the work function
  * in model/share/chem_share.c
    - added  _kf_fit4() and _dkfdT_fit4()
    - in add_to_*_fit4(), added calls to _kf_fit4() and _dkfdT_fit4()
  * in tools/chemkin2cfdwarp.c
    - made various modifications to take into account CHEMKIN syntax involving REACTIONS
  * in bin
    - Updated Schulein.wrp
    

2022 AUG 10a
  * in cycle/resconv/_MUSCL/resconv.c
    - in write_disc_resconv_template(), changed the default values for AOWENO_gammalo and
      AOWENO_gammahi
  * in various files
    - replaced "R=1.9872;" by "R=Rchem;"
  * in model/thermo/_thermo.h